--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,8 +1,35 @@
-@import 'tailwindcss/base';
-@import 'tailwindcss/components';
-@import 'tailwindcss/utilities';
-@import url('https://fonts.googleapis.com/css2?family=Lora&family=Dancing+Script&display=swap');
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&family=Lora:wght@400;500;600;700&display=swap');
 
 body {
   margin: 0;
 }
+
+p,
+h1,
+h2,
+h3 {
+  font-family: "lora", serif;
+}
+
+.reflection {
+  text-shadow: 0 1px 0 #ccc, 0 2px 0 #ccc, 0 3px 0 #ccc,
+    0 6px 1px rgba(0, 0, 0, 0.1), 0 0 5px rgba(59, 55, 55, 0.5),
+    0 1px 3px rgba(50, 47, 47, 0.5);
+}
+
+.dark-img {
+  filter: brightness(0.7);
+}
+
+.image-shadow {
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.5);
+}
+
+.divider-pattern {
+  background-color: #fdfdfd;
+  background-image: url("data:image/svg+xml,%3Csvg width='12' height='16' viewBox='0 0 12 16' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M4 .99C4 .445 4.444 0 5 0c.552 0 1 .45 1 .99v4.02C6 5.555 5.556 6 5 6c-.552 0-1-.45-1-.99V.99zm6 8c0-.546.444-.99 1-.99.552 0 1 .45 1 .99v4.02c0 .546-.444.99-1 .99-.552 0-1-.45-1-.99V8.99z' fill='%23a96449' fill-opacity='0.4' fill-rule='evenodd'/%3E%3C/svg%3E");
+}
+
